<resources>
    <string name="app_name">Punto5</string>

    <string name="nombre">Nombre:</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Digite el nombre</string>
    <string name="hint_correo">Digite el correo</string>
    <string name="hint_telefono">Digite el telefono</string>
    <string name="correo">Correo:</string>
    <string name="telefono">Telefono:</string>
    <string name="boton">OK</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="sexo">Sexo:</string>
    <string name="c1">VideoJuegos</string>
    <string name="c2">Deporte</string>
    <string name="c3">Ciencia</string>
    <string name="c4">Automoviles</string>
    <string name="hobbies">Hobbies:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="fecha">Fecha de Nacimiento:</string>

    <string-array name="ciudades">
        <item>Leticia</item>
        <item>Medellín</item>
        <item>Arauca</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
        <item>Tunja</item>
        <item>Manizales</item>
        <item>Florencia</item>
        <item>Yopal</item>
        <item>Popayán</item>
        <item>Valledupar</item>
        <item>Quibdó</item>
        <item>Montería</item>
        <item>Bogotá</item>
        <item>Puerto Inírida</item>
        <item>San José del Guaviare</item>
    </string-array>
</resources>
